--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
   height: auto;
   width: max-content;
-  background-color: whitesmoke;
-  box-shadow: 0 0 5px 2px;
-  border-radius: 10%;
-  margin: 10px;
+  background-color: white;
+  /* box-shadow: 0 0 5px 2px; */
+  /* border-radius: 10%; */
+  /* margin: 10px; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -27,6 +27,11 @@ html {
   box-sizing: inherit;
   margin: 5px;
   padding: 3px;
+}
+
+hr {
+  margin: 0px;
+  padding: 0px;
 }
 
 ul {
@@ -61,7 +66,7 @@ li {
   margin: 5px;
   background-color: white;
   /* box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5); */
-  box-shadow: 0 0 5px 2px;
+  /* box-shadow: 0 0 5px 2px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,4 +77,27 @@ h2,
 h3 {
   color: teal;
   text-shadow: 1px 1px 1px black, 0 0 0 black;
+}
+
+.NavLinkList {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.NavLinkItem {
+  font-style: normal;
+  font-size: 22px;
+}
+
+.NavLink {
+  color: gray;
+}
+
+.NavLinkActive {
+  color: teal;
+  font-weight: 600;
+  text-decoration: underline;
 }
