--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,10 @@ h3 {
 
 .NavLink {
   color: gray;
+  list-style: none;
+  font-style: normal;
+  font-size: 24px;
+  margin-right: 80px;
 }
 
 .NavLinkActive {
